[gd_scene load_steps=2 format=3 uid="uid://b2htcgmpe4a5h"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_k6ktk"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_k6ktk")

[node name="SpawnedEnemies" type="Node2D" parent="."]

[node name="SpawnedCoins" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.23
one_shot = true
autostart = true

[connection signal="child_exiting_tree" from="SpawnedCoins" to="." method="_on_spawned_coins_child_exiting_tree"]
